<resources>
    <string name="app_name">Faurecia</string>
    <string name="PPM_header">PPM calculation</string>
    <string name="details_table_header">Details Table</string>

    <string name="description">logotype</string>

    <string name="ppm_column_detail">DETAIL</string>
    <string name="ppm_column_normal">Normal</string>
    <string name="ppm_column_defective">Bad</string>
    <string name="ppm_column_total">Total</string>

    <string name="ppm_front_left">PrzL</string>
    <string name="ppm_front_right">PrzP</string>
    <string name="ppm_back_left">TylL</string>
    <string name="ppm_back_right">TylP</string>

    <string name="ppm_table_default_field">0</string>
    <string name="ppm_button_count">Count</string>

    <string name="ppm_on_result">PPM</string>

    //DLE
    <string name="dle_hours_input">Liczba godzin</string>
    <string name="dle_on_result">DLE</string>
    <string name="dle_button_count">Count</string>


    //MENU
    <string name="nav_menu_PPM">PPM</string>
    <string name="nav_menu_DLE">DLE</string>




</resources>