<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar">


    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/PPM_header"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/ppm_table_header"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_table_header"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ppm_table_header">

        <TableRow android:id="@+id/ppm_header_row">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:padding="4dp"
                android:text="@string/ppm_column_detail"
                android:textAlignment="center"
                android:textColor="#FFFDFD"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:padding="4dp"
                android:text="@string/ppm_column_normal"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#D81B60"
                android:padding="4dp"
                android:text="@string/ppm_column_defective"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3949AB"
                android:padding="4dp"
                android:text="@string/ppm_column_total"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>


        <TextView />


        <TableRow
            android:id="@+id/ppm_front_left_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FDD835"
                android:text="@string/ppm_front_left"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/front_left_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <EditText
                android:id="@+id/front_left_defect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/front_left_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TextView />

        <TableRow
            android:id="@+id/ppm_front_right_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FDD835"
                android:text="@string/ppm_front_right"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/front_right_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <EditText
                android:id="@+id/front_right_defect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/front_right_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TextView />


        <TableRow
            android:id="@+id/ppm_back_left_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FDD835"
                android:text="@string/ppm_back_left"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/back_left_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <EditText
                android:id="@+id/back_left_defect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/back_left_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TextView />

        <TableRow
            android:id="@+id/ppm_back_right_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FDD835"
                android:text="@string/ppm_back_right"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/back_right_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <EditText
                android:id="@+id/back_right_defect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/ppm_table_default_field"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/back_right_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/PPM_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/teal_200"
        android:text="@string/ppm_on_result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/PPM_count_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/ppm_button_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PPM_result" />


</androidx.constraintlayout.widget.ConstraintLayout>