<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:id="@+id/dle_layout"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/views_background"
        android:contentDescription="@string/description"
        android:elevation="0dp"
        android:src="@drawable/header_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ppm_front_left_row"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/views_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/dle_hours_input"
            android:textColor="@color/text_normal"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/dle_hours_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="no"
            android:backgroundTint="@color/background"
            android:cursorVisible="true"
            android:gravity="center"
            android:hint="@string/ppm_table_default_field"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColor="@color/text_normal"
            android:textColorHint="@color/text_normal"
            android:textCursorDrawable="@color/text_normal"
            android:textSize="44sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/dle_table_dle_result"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/views_background"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ppm_front_left_row">


        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/views_background"
            android:gravity="center"
            android:text="@string/dle_on_result"
            android:textColor="@color/text_normal"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dle_DLE_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/result_background"
            android:gravity="center"
            android:hint="%"
            android:maxLength="5"
            android:textColor="@color/text_normal"
            android:textColorHint="@color/text_normal"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dle_table_ppm_result"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/views_background"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dle_table_dle_result">


        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/views_background"
            android:gravity="center"
            android:text="@string/ppm_on_result"
            android:textColor="@color/text_normal"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dle_PPM_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/result_background"
            android:gravity="center"
            android:hint="@string/ppm_table_default_field"
            android:maxLength="5"
            android:textColor="@color/text_normal"
            android:textColorHint="@color/text_normal"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/dle_count_button"
        android:layout_width="144dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/text_normal"
        android:elevation="8dp"
        android:stateListAnimator="@null"
        android:text="@string/dle_button_count"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dle_table_ppm_result" />


</androidx.constraintlayout.widget.ConstraintLayout>